prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_08.nut
let tab = { x = 4.0 }
let { x: string|null } = tab
return x
